# apertium-kok

./: .gitignore  AUTHORS  Makefile.am  README  apertium-kok.kok.rlx  apertium-kok.pc.in  apertium-kok.post-kok.dix  configure.ac  kok.prob  modes.xml
corpus/: kok.tagged  kok.txt  kok_1.tagged  kok_1.txt  kok_2.txt  kok_set1.txt  total.txt
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
